--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,6 +1,25 @@
 <h3>Cart</h3>
 
-<div class="cart-item" *ngFor="let item of items">
-  <span>{{ item.name }}</span>
+<p>
+  <a routerLink="/shipping">Precio gastos de envío</a>
+</p>
+
+<div class="cart-item" *ngFor="let item of items; let i = index">
+  <span>{{ item.title }}</span>
   <span>{{ item.price | currency }}</span>
+  <span><button class="button" (click)="removeItem(i)">Eliminar</button></span>
 </div>
+
+<form [formGroup]="checkoutForm" (ngSubmit)="onSubmit()">
+  <div>
+    <label for="name"> Nombre </label>
+    <input id="name" type="text" formControlName="name" />
+  </div>
+
+  <div>
+    <label for="address"> Dirección </label>
+    <input id="address" type="text" formControlName="address" />
+  </div>
+
+  <button class="button" type="submit">Comprar</button>
+</form>
